# Reflex-TrackManager

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateDeployment.bat  GenerateSolution.bat  InstallerSetupScript.iss  LICENSE  README.md
app/: BuildDefines.h.in  CMakeLists.txt  Main.cpp
injector/: CMakeLists.txt  EnsureCleanup.h  Injector.cpp  Injector.h  Main.cpp
overlay/: CMakeLists.txt  dllmain.cpp  dllmain.h
overlay/entry/: dllmain.cpp  dllmain.h
overlay/grpc/: TrackManagementClient.cpp  TrackManagementClient.h  testclient.cpp  testclient.h
overlay/reflex/: GameWindow.cpp  GameWindow.h  InstalledTracks.cpp  InstalledTracks.h  Log.cpp  Log.h  OverlayKernel.cpp  OverlayKernel.h  SharedTracks.cpp  SharedTracks.h  TrackSelection.cpp  TrackSelection.h
overlay/scripts/: SourceFiles.cmake
protos/: helloworld.proto  trackmanagement.proto
trackmanager/: CMakeLists.txt  EmbedAdminManifestIntoExe.bat  Program.cs  TrackManager.sln  dllmain.cpp
trackmanager/InvalidTrackHandler/: InvalidTrackHandler.csproj  MultipleTracksPerZipHandler.cs  Program.cs  RarHandler.cs  Slot8Handler.cs  TrackProcessor.cs
trackmanager/Lambdas/BeginPollingReflexCentral/: Function.cs  Readme.md  aws-lambda-tools-defaults.json
trackmanager/Lambdas/BeginPollingReflexCentral/Properties/: launchSettings.json
trackmanager/Lambdas/DeleteExpiredTrackSetsFromDb/: DeleteExpiredTrackSetsFromDb.csproj  Function.cs  aws-lambda-tools-defaults.json
trackmanager/Lambdas/PollDs19TrackList/: Function.cs  PollDs19TrackList.csproj  Readme.md  aws-lambda-tools-defaults.json
trackmanager/Lambdas/PollDs19TrackList.Tests/: FunctionTest.cs  PollDs19TrackList.Tests.csproj
trackmanager/Lambdas/PollReflexCentralForNewTracks/: Function.cs  PollReflexCentralForNewTracks.csproj  Readme.md  aws-lambda-tools-defaults.json
trackmanager/Lambdas/PollReflexCentralForNewTracks.Tests/: FunctionTest.cs  PollReflexCentralForNewTracks.Tests.csproj
trackmanager/Lambdas/UploadReflexTrackToS3/: Readme.md  ReflexThirdPartyMonitor.cs  UploadReflexTrackToS3.csproj  aws-lambda-tools-defaults.json
trackmanager/Lambdas/UploadReflexTrackToS3.Tests/: FunctionTest.cs  UploadReflexTrackToS3.Tests.csproj
trackmanager/Properties/: AssemblyInfo.cs
trackmanager/Proto/: Proto.csproj
trackmanager/Reflex-Utility/: AwsS3Utility.cs  DS19Track.cs  Ds19TrackListParser.cs  ExceptionLogger.cs  HtmlParser.cs  HttpUtility.cs  ImageExtension.cs  ReflexCentralParser.cs  ReflexManagerVersion.cs  ReflexUtility.csproj  SharedReflexTracks.cs  TimeUtility.cs  Track.cs  TrackDataUtility.cs  TrackList.cs  TrackSharing.cs  TrackValidator.cs
trackmanager/Reflex-Utility/LambdaUtilities/: PollTracks.cs
trackmanager/Reflex-Utility/TableItems/: TrackTableItem.cs
trackmanager/TrackManager/: ApplicationUpdater.cs  ExceptionLogger.cs  LocalSettings.cs  LocalTrack.cs  Log.cs  Program.cs  Reflex.cs  Sharing.cs  TimeUtility.cs  TrackInstaller.cs  TrackManagementService.cs  TrackManager.csproj
trackmanager/TrackManager/Properties/: launchSettings.json
trackmanager/TrackManager/Steam/: AcfReader.cs
trackmanager/TrackManagerUpdater/: Program.cs  TrackManagerUpdater.csproj  packages.config
trackmanager/TrackManagerUpdater/Properties/: AssemblyInfo.cs
trackmanager/grpc/: testclient.h
trackmanager/scripts/: SourceFiles.cmake
